# Code-template

./: LICENSE
AI-native architecture_template/: .gitignore  (+4 more)
Chiplet-Architecture_template/: .gitignore  Cargo.toml  Makefile  README.md
Chiplet-Architecture_template/.cargo/: config.toml
Chiplet-Architecture_template/chiplets/accelerator/: accelerator_chiplet.yaml
Chiplet-Architecture_template/chiplets/core/: core_chiplet.yaml
Chiplet-Architecture_template/chiplets/io/: io_chiplet.yaml
Chiplet-Architecture_template/chiplets/memory/: memory_chiplet.yaml
Chiplet-Architecture_template/config/chiplet/: chiplet_config.yaml  interconnect_config.yaml
Chiplet-Architecture_template/config/system/: resource_allocation.yaml  system_config.yaml
Chiplet-Architecture_template/docs/api_reference/: openapi.yaml  swagger-ui.html
Chiplet-Architecture_template/docs/architecture/: chiplet_architecture.md  interconnect_protocol.md
Chiplet-Architecture_template/src/: lib.rs  main.rs
Chiplet-Architecture_template/src/chiplets/: mod.rs
Chiplet-Architecture_template/src/interconnect/: mod.rs
Chiplet-Architecture_template/src/system/: mod.rs  resource_manager.rs  scheduler.rs
Heterogeneous-computing-architecture_template/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
Heterogeneous-computing-architecture_template/config/: application.yaml
Heterogeneous-computing-architecture_template/scripts/: benchmark.sh  build_models.sh  deploy_models.sh  optimize_models.sh
Heterogeneous-computing-architecture_template/src/: main.rs
(+316 files in other folders)
