[package]
name = "chiplet_architecture_template"
version = "0.1.0"
edition = "2021"
authors = ["Example Author <author@example.com>"]
description = "Reference template for building chiplet-based architectures in Rust."
license = "MIT OR Apache-2.0"
repository = "https://example.com/chiplet-architecture-template"
keywords = ["chiplet", "architecture", "ucie", "template"]
readme = "README.md"

[[bin]]
name = "chiplet-architecture"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
serde_json = "1"
pretty_assertions = "1"

[features]
default = ["std"]
std = []
experimental-accelerators = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
